Refactors.
Fixed a few things the code checker was yelling about.